test: Add com.karuslabs.elementary library for testing Annotation Processors
- Adds junit-jupiter-params (required by elementary) and Mockito
- Creates RecordGeneratorTest
  - Add tests for model records
  - Add test for the `@DTO.Excluded` annotation
  - Add tests for `@DTO.MapToId` annotation
- Small refactorings in DTOProcessor and RecordGenerator for tests
- Rename the original generate method to write
  and moves the code that returns the StringBuilder.toString()
  to a new generate() method.
  The method now correctly deals with %n chars.

- Add ClassUtilTest
- Add AnnotationDataTest

Close #32

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>